[Added] OC-603  #comment Added status, header and body to a new object that is used in js #time 2h